--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GEMINI_API_KEY=AIzaSyBQi4LrGW9pFirEiTnFw3RONXz39nUpghQ
 HIX_API_KEY=71b72a19738541f28fbe02460335e12c
+MONGO_URI=mongodb+srv://mahfoozalamwork:9jnTs7gAQe4T6Ze6@cluster0.xgls1ao.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
